--- a/src/index.css
+++ b/src/index.css
@@ -16,4 +16,12 @@ code {
  * From: https://stackoverflow.com/a/40240359
  */
 [data-reactroot]
-        {height: 100% !important; }
+        {
+          height: 100% !important;
+          min-height: 100% !important;
+        }
+
+html, body, body>div {
+  min-height: 100%;
+  height: 100%;
+}
